login and register pages finished

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,7 +29,7 @@
         <span th:text="${errorMessage}"></span>
     </div>
 
-    <form th:action="@{/user/authenticate}" method="post">
+    <form th:action="@{/users/authenticate}" method="post">
 
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
