--- a/src/main/resources/templates/tickets.html
+++ b/src/main/resources/templates/tickets.html
@@ -27,7 +27,7 @@
     <div class="header">
         <h1>My Tickets (User ID: <span th:text="${currentUserId}"></span>)</h1>
         <!-- The 'RENTER' authority check should be enforced in SecurityConfig/Controller -->
-        <a th:href="@{/web/tickets/create}" class="create-btn">
+        <a th:href="@{/tickets/create}" class="create-btn">
             + Create New Ticket
         </a>
     </div>
