Added admin and Added Feature for MECHANIC

--- a/src/main/resources/templates/ticketALL.html
+++ b/src/main/resources/templates/ticketALL.html
@@ -101,8 +101,8 @@
         <!-- New Group for Home Button and Title -->
         <div class="header-left">
             <!-- Home Button -->
-            <a th:href="@{/}" class="home-btn">
-                Home
+            <a th:href="@{/tickets/list}" class="home-btn">
+                Back
             </a>
             <h1>ALL Ticket <span th:text="${currentUserId}"></span></h1>
         </div>
